# scada-ipm

./: README.md
fastapi-scada/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
fastapi-scada/app/: background_tasks.py  main.py  pyproject.toml
fastapi-scada/app/crud/: alert.py  audit.py  device.py  firmware.py  report.py  tenant.py  user.py
fastapi-scada/app/database/: mongo.py  redis.py
fastapi-scada/app/models/: alert.py  audit.py  auth.py  device.py  firmware.py  report.py  tenant.py  user.py
fastapi-scada/app/routers/: __init__.py  alert.py  audit.py  auth.py  device.py  firmware.py  report.py  tenant.py  user.py  websocket.py
fastapi-scada/app/schema/: audit.py  device.py  user.py
fastapi-scada/app/services/: alert.py  cache_service.py  event_bus.py  mqtt.py  status_manager.py
fastapi-scada/app/utils/: __init__.py  auth.py  config.py  logging.py  serializers.py
fastapi-scada/mosquitto/config/: mosquitto.conf
scada-iot-master/data/: CMD.html  Config_wifi.html  Config_wifi.json  data.json  file_edit.html  firmware_update.html  index.html
scada-iot-master/lib/Modbus/: Modbus.h
scada-iot-master/src/: MQTTClient.h  esp32_light.code-workspace  index.h  main.cpp  power_meter.h  printLCD.h
scada-react-frontend/: .dockerignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
scada-react-frontend/docs/: api.md
scada-react-frontend/src/: App.css  App.tsx  RootLayout.tsx  index.css  main.tsx
(+55 files in other folders)
